--- a/css/normalize.css
+++ b/css/normalize.css
@@ -18,6 +18,7 @@ html {
 
 body {
   margin: 0;
+  background-color: #206779
 }
 
 /* HTML5 display definitions
@@ -133,7 +134,7 @@ dfn {
  */
 
 h1 {
-  font-size: 2em;
+  font-size: 4em;
   margin: 0.67em 0;
 }
 
