--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,22 @@
 /* Your Website Styles */
+body{
+	background: url("../img/bg.png") ;
+}
 h1{
 	font-family: 'Oswald';
-	color:	#AD782E;
+	color:	#42CDA3;
+	font-style: italic;
+
+	background: red;
+	padding: 10px;
+	border: 10px black double;
+	width: 300px;
+	margin: 10px;
+}
+
+p{
+	line-height: 36px;
+	color: #2BA180;
 }
 
 /* Show Grid */
